--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -10,6 +10,7 @@
     <h2 routerLink="/dashboard/circle">Circle</h2>
     <h2 routerLink="/dashboard/bmi">BMI</h2>
     <h2 routerLink="/dashboard/directives">Directives</h2>
+    <h2 routerLink="/dashboard/employee">Employee</h2>
 </div>
 <div class="right">
     <router-outlet></router-outlet>
