--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -1,17 +1,44 @@
-<h1>Employee Data</h1>
+<h1>Product Data</h1>
 <h3>Today :{{date}}</h3>
 <h3>Today's Date :{{date |date:'dd-MM-yyyy'}}</h3>
 <h3>Time :{{date |date:'hh-mm-ss'}}</h3>
 <button calss="sort" (click)="sort()">Package Low to High</button>
 
-<table border="1">
+<!-- ( We using filter process ) -->
+
+   <select [(ngModel)]="roleFilter" (change)="filter()">
+                    <option value="UIDeveloper">UIDeveloper</option>
+                    <option value="Software Developer">Software Developer</option>
+                    <option value="Data engineer">Data engineer</option>
+                    <option value="Testing Engineer">Testing Engineer</option>
+                </select>
+                
+
+<input type="text" [(ngModel)]="name" (keyup)="nameFilter()" placeholder="Enter name to screen">
+
+<button class="btn btn-warning" (click)="bonus()">Add 30K Bonus</button>
+
+<button class="btn btn-info" (click)="costToCompany()">Cost of the Company</button><br>
+
+<label>Name :</label>
+<input type="text" [(ngModel)]="empName"><br>
+<label>Experience :</label>
+<input type="text" [(ngModel)]="experience"><br>
+<label>Package :</label>
+<input type="text" [(ngModel)]="package"><br>
+<label>Role :</label>
+<input type="text" [(ngModel)]="role"><br>
+<button class="btn btn-primary" (click)="addRecord()">Add New Record</button>
+
+
+<table   class="table table-primary" >
     <thead>
         <tr>
             <th>S No</th>
-            <th>Name</th>
-            <th>Experience</th>
-            <th>Package</th>
-            <th>Role</th>
+            <th>Product Name</th>
+            <th>Price</th>
+            <th>Rating</th>
+            <th>Free Delivery</th>
             <th>Action</th>
         </tr>
     </thead>
