--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -12,6 +12,7 @@
     <h2 routerLink="/dashboard/directives">Directives</h2>
     <h2 routerLink="/dashboard/employee">Employee</h2>
     <h2 routerLink="/dashboard/product">Product</h2>
+    <h2 routerLink="/dashboard/vehicles">Vehicles</h2>
 </div>
 <div class="right">
     <router-outlet></router-outlet>
