--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -13,6 +13,8 @@
     <h2 routerLink="/dashboard/employee">Employee</h2>
     <h2 routerLink="/dashboard/product">Product</h2>
     <h2 routerLink="/dashboard/vehicles">Vehicles</h2>
+    <h2 routerLink="/dashboard/mail">Mail</h2>
+    <h2 routerLink="/dashboard/flipkart">Flipkart</h2>
 </div>
 <div class="right">
     <router-outlet></router-outlet>
