--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
     <h1>My Website</h1>
     <hr>
     <h2 routerLink="/dashboard/home">Home</h2>
-    <h2 routerLink="/dashboard/welcome">Welcome</h2>
+    <!-- <h2 routerLink="/dashboard/welcome">Welcome</h2> -->
     <h2 routerLink="/dashboard/databinding">Data Binding</h2>
     <h2 routerLink="/dashboard/calculator">Calculator</h2>
     <h2 routerLink="/dashboard/rectangle">Rectangle</h2>
@@ -13,8 +13,11 @@
     <h2 routerLink="/dashboard/employee">Employee</h2>
     <h2 routerLink="/dashboard/product">Product</h2>
     <h2 routerLink="/dashboard/vehicles">Vehicles</h2>
+    <h2 routerLink="/dashboard/createvehicle">Create Vehicle</h2>
     <h2 routerLink="/dashboard/mail">Mail</h2>
     <h2 routerLink="/dashboard/flipkart">Flipkart</h2>
+    <h2 routerLink="/dashboard/pinterest">Pinterest</h2>
+    <h2 routerLink="/dashboard/weather">Weather</h2>
 </div>
 <div class="right">
     <router-outlet></router-outlet>
