--- a/src/app/createvehicle/createvehicle.component.html
+++ b/src/app/createvehicle/createvehicle.component.html
@@ -1,5 +1,10 @@
 <H1>Vehicle Form</H1>
 
+<h1 *ngIf="!id">Create Vehicle</h1>
+<h1 *ngIf="id">Edit Vehicle</h1>
+
+<!-- <h1>{{id ? 'Edit Vehicle' : 'Create Vehicle'}}</h1>  Ternary Operators -->
+
 <Form [formGroup]="vehicleForm">
     <label>Vehicle Name :</label>
     <input type="text" formControlName="Vehicle"><br>
