--- a/src/app/vehicles/vehicles.component.html
+++ b/src/app/vehicles/vehicles.component.html
@@ -71,7 +71,7 @@
       <td>{{ vehicle.fuel }}</td>
       <td>{{ vehicle.color }}</td>
       <td><img src="{{ vehicle.image }}" alt="" style="width: 75px; height: 75px;"></td>
-      <td>{{ vehicle.cost }}</td>
+      <td>{{ vehicle.cost | rupee}}</td>
       <td>{{ vehicle.tyres }}</td>
       <td>{{ vehicle.id }}</td>
       <td>
