--- a/src/app/create-idcard/create-idcard.component.html
+++ b/src/app/create-idcard/create-idcard.component.html
@@ -5,7 +5,7 @@
 
 <Form [formGroup]="createidCardForm">
     <label >Student Name</label>
-    <input type="text" formControlName="name"><br>
+    <input type="text" formControlName="name" appCapitalCreate><br>
      <label >Student Phone</label>
     <input type="text" formControlName="phone"><br>
      <label >Student City</label>
